<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="popular_movie_title">Popular Movies</string>
    <string name="stock_hawk_title">Stock Hawk</string>
    <string name="build_it_bigger_title">Build It Bigger</string>
    <string name="make_your_app_material_title">Make Your App Material</string>
    <string name="go_ubiquitous_title">Go Ubiquitous</string>
    <string name="capstone_title">Capstone</string>
</resources>
