<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mohamedisoukrane.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/ButtonStyle"
        android:text="@string/popular_movie_title"
        android:id="@+id/popular_movies"
        android:layout_below="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title" />

    <Button
        style="@style/ButtonStyle"
        android:text="@string/stock_hawk_title"
        android:id="@+id/stock_hawk"
        android:layout_below="@+id/popular_movies"
        android:layout_alignLeft="@+id/popular_movies"
        android:layout_alignStart="@+id/popular_movies"
        android:layout_alignRight="@+id/popular_movies"
        android:layout_alignEnd="@+id/popular_movies" />

    <Button
        style="@style/ButtonStyle"
        android:text="@string/build_it_bigger_title"
        android:id="@+id/build_it_bigger"
        android:layout_below="@+id/stock_hawk"
        android:layout_alignLeft="@+id/stock_hawk"
        android:layout_alignStart="@+id/stock_hawk"
        android:layout_alignRight="@+id/stock_hawk"
        android:layout_alignEnd="@+id/stock_hawk" />

    <Button
        style="@style/ButtonStyle"
        android:text="@string/make_your_app_material_title"
        android:id="@+id/make_your_app_material"
        android:layout_below="@+id/build_it_bigger"
        android:layout_alignLeft="@+id/build_it_bigger"
        android:layout_alignStart="@+id/build_it_bigger"
        android:layout_alignRight="@+id/build_it_bigger"
        android:layout_alignEnd="@+id/build_it_bigger" />

    <Button
        style="@style/ButtonStyle"
        android:text="@string/go_ubiquitous_title"
        android:id="@+id/go_ubiquitous"
        android:layout_below="@+id/make_your_app_material"
        android:layout_alignLeft="@+id/make_your_app_material"
        android:layout_alignStart="@+id/make_your_app_material"
        android:layout_alignRight="@+id/make_your_app_material"
        android:layout_alignEnd="@+id/make_your_app_material" />

    <Button
        style="@style/ButtonStyle"
        android:text="@string/capstone_title"
        android:id="@+id/capstone"
        android:layout_below="@+id/go_ubiquitous"
        android:layout_alignLeft="@+id/go_ubiquitous"
        android:layout_alignStart="@+id/go_ubiquitous"
        android:layout_alignRight="@+id/go_ubiquitous"
        android:layout_alignEnd="@+id/go_ubiquitous" />
</RelativeLayout>
